# inference-perf

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-push-config.yaml  BOB.md  CONFIG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.e2e-test  Makefile  OWNERS  OWNERS_ALIASES  README.md  SETUP.md  analyze.py  cloudbuild.yaml  config.yml  configsweep.yaml  flake.nix  project_structure.md  pyproject.toml  requirements.txt
.github/: changelog-config.json
.github/ISSUE_TEMPLATE/: blank_issue.md  bug_request.md  feature_request.md
.github/workflows/: coverage.yml  docker-build.yml  e2e_test-on-change.yml  format.yml  publish-on-change.yml  publish-on-release.yml  release.yml  test-release.yml  unit_test.yml
demos/kubecon-na-2025/: README.md  config.yaml
deploy/: README.md  manifests.yaml
deploy/inference-perf/: Chart.yaml  README.md  config.yaml  custom-values.yaml  lmcache-low-values.yaml  lmcache-prefix-values.yaml  prefix-values.yaml  quick-values.yaml  saturation-detect-values.yaml  values.yaml  valuesqwen32b-multichat.yaml  valuesqwen32b-pc.yaml  valuesqwen32btest.yaml
docs/: analysis.md  cli_flags.md  config.md  conversation_replay.md  design.md  goodput.md  loadgen.md  metrics.md  otel_instrumentation.md  otel_trace_replay.md  reports.md  sweep.md
e2e/: conftest.py
e2e/configs/: e2e_simple_mock_client.yaml
e2e/testdata/: sharegpt.json
e2e/tests/: test_llm_d_inference_sim.py  test_metrics_fallback.py  test_mock_client.py  test_prometheus.py
e2e/utils/: __init__.py  benchmark.py  llm_d_inference_sim.py  testdata.py
examples/multilora/: multilora_config.yml
examples/otel/: README.md  run_with_jaeger.sh
examples/sglang/: config-random.yml  config-shared-prefix.yml  config-synthetic.yml  config.yml  docker-compose.yml  main.ipynb  prometheus.yml
examples/structured-output/: README.md  config.yml  schema.json
examples/tgi/: config-random.yml  config-shared-prefix.yml  config-synthetic.yml  config.yml  docker-compose.yml  main.ipynb  prometheus.yml
examples/trace-replay/: trace.csv
examples/vllm/: .gitignore  config-circuitbreaker.yml  config-random.yml  config-shared-prefix-distributions.yml  config-shared-prefix-multi-turn.yml  config-shared-prefix.yml  config-sweep.yml  config-synthetic.yml  config-trace-replay.yml  config.yml  docker-compose.yml  main.ipynb  prometheus.yml  vllm_server.ipynb
inference_perf/: __init__.py  __main__.py  config.py  logger.py  main.py
inference_perf/analysis/: __init__.py  analyze.py
inference_perf/apis/: __init__.py  base.py  chat.py  completion.py  streaming_parser.py  user_session.py
inference_perf/circuit_breaker/: __init__.py  base.py  config.py  simple_breaker.py
inference_perf/client/: __init__.py  base.py  mock_client.py  request_processor.py  test_placeholder.py  vllm_client.py
inference_perf/collector_reporters/: __init__.py  base.py  request_lifecycle.py
inference_perf/collectors/: __init__.py  base.py  request_lifecycle.py
inference_perf/colletor_metric/: __init__.py  base.py
inference_perf/colletor_metrics/: base.py
inference_perf/datagen/: __init__.py  base.py  cnn_dailymail_datagen.py  conversation_replay_datagen.py  datagen_utils.py  export_replay_graph_to_dot.py  hf_billsum_datagen.py  hf_sharegpt_datagen.py  infinity_instruct_datagen.py  mock_datagen.py  otel_trace_replay_datagen.py  otel_trace_to_replay_graph.py  otel_trace_utils.py  random_datagen.py  replay_graph_session_datagen.py  replay_graph_types.py  shared_prefix_datagen.py  synthetic_datagen.py
inference_perf/dataset/: __init__.py
inference_perf/loadgen/: __init__.py  load_generator.py  load_timer.py
inference_perf/metrics/: __init__.py  base.py  client.py  mock_client.py  prometheus_client.py  session_collector.py
inference_perf/prompts/: __init__.py  base.py  chat.py  completion.py
inference_perf/prompts_metrics/: base.py
inference_perf/report/: __init__.py  base.py
inference_perf/reportgen/: __init__.py  base.py  mock_reportgen.py
inference_perf/utils/: __init__.py  cli_parser.py  cli_summary.py  custom_tokenizer.py  distribution.py  report_file.py  request_queue.py  trace_reader.py
lmcache/llmd-lmcache-20251008-072853/: config.yaml  stage_0_lifecycle_metrics.json  stage_0_prometheus_metrics.json  stage_10_lifecycle_metrics.json  stage_10_prometheus_metrics.json  stage_11_lifecycle_metrics.json  stage_11_prometheus_metrics.json  stage_12_lifecycle_metrics.json  stage_12_prometheus_metrics.json  stage_13_lifecycle_metrics.json  stage_13_prometheus_metrics.json  stage_14_lifecycle_metrics.json  stage_14_prometheus_metrics.json  stage_15_lifecycle_metrics.json  stage_15_prometheus_metrics.json  stage_16_lifecycle_metrics.json  stage_16_prometheus_metrics.json  stage_1_lifecycle_metrics.json  stage_1_prometheus_metrics.json  stage_2_lifecycle_metrics.json  stage_2_prometheus_metrics.json  stage_3_lifecycle_metrics.json  stage_3_prometheus_metrics.json  stage_4_lifecycle_metrics.json  stage_4_prometheus_metrics.json  stage_5_lifecycle_metrics.json  stage_5_prometheus_metrics.json  stage_6_lifecycle_metrics.json  stage_6_prometheus_metrics.json  stage_7_lifecycle_metrics.json  stage_7_prometheus_metrics.json  stage_8_lifecycle_metrics.json  stage_8_prometheus_metrics.json  stage_9_lifecycle_metrics.json  stage_9_prometheus_metrics.json  summary_lifecycle_metrics.json  summary_prometheus_metrics.json
lmcache/llmd-vllm-20251008-094701/: config.yaml  stage_0_lifecycle_metrics.json  stage_0_prometheus_metrics.json  stage_10_lifecycle_metrics.json  stage_10_prometheus_metrics.json  stage_11_lifecycle_metrics.json  stage_11_prometheus_metrics.json  (+30 more)
paper/: paper.bib  paper.md
scripts/: check_coverage_regression.py  check_license.py  sync_cli_flags_doc.py
tests/: test_config.py  test_conversation_replay_datagen.py  test_logger.py  test_otel_instrumentation.py  test_otel_replay_datagen.py  test_otel_trace_to_replay_graph.py  test_otel_trace_utils.py  test_streaming_multi_token_chunks.py  test_streaming_response_order.py  test_trace_replay.py
workflows/: format.yml
workload-catalog/: README.md
(+934 files in other folders)
